<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2015 Mehmet Akif Tütüncü
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
-->
<resources>
    <string name="app_name">My KentKart</string>

    <string name="loading">Loading, please wait.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="kentKartList_empty">You do not have any KentKart saved.</string>

    <string name="rate_app">Would you like to rate/comment on the app?</string>

    <string name="feedback_subject">About My KentKart</string>

    <string name="enableNFCDialog_title">Enable NFC?</string>
    <string name="enableNFCDialog_message">Your device has NFC support but it is currently disabled.\n\nYou can use NFC to see your KentKart information just by touching your KentKart to your device.\n\nDo you want to go to settings to enable NFC?</string>
    <string name="enableNFCDialog_hint">Don\'t forget to press back key after enabling NFC to come back to My KentKart.</string>

    <string name="kentKartListActivity_menu_more">More</string>

    <string name="kentKartEditActivity_title_add">Add KentKart</string>
    <string name="kentKartEditActivity_title_edit">Edit KentKart</string>
    <string name="kentKartEditActivity_menu_save">Save</string>
    <string name="kentKartEditActivity_menu_delete">Delete</string>
    <string name="kentKartEditActivity_name_hint">Name of the KentKart</string>
    <string name="kentKartEditActivity_name_empty">KentKart name cannot be empty!</string>
    <string name="kentKartEditActivity_number_hint">Number of the KentKart</string>
    <string name="kentKartEditActivity_number_info">KentKart number is the 11 digit number, usually found on the back side of your card.</string>
    <string name="kentKartEditActivity_number_empty">KentKart number cannot be empty!</string>
    <string name="kentKartEditActivity_number_error">KentKart number is invalid!</string>
    <string name="kentKartEditActivity_region_info">Select the region in which KentKart is active.</string>

    <string name="kentKartInformationActivity_section_balance">Current Balance</string>
    <string name="kentKartInformationActivity_section_lastUse">Last Use</string>
    <string name="kentKartInformationActivity_section_lastLoad">Last Load</string>
    <string name="kentKartInformationActivity_connectedTransport_duration">Remaining connected transport duration: %1$s minutes</string>
    <string name="kentKartInformationActivity_error">An error occurred while loading KentKart information. Please try again later.</string>
    <string name="kentKartInformationActivity_offline">You are not connected to the internet! My KentKart cannot work without an internet connection.</string>
    <string name="kentKartInformationActivity_blocked">KentKart servers returned an error! You may have been blocked due to too many requests. Please try again later.</string>

    <string name="moreActivity_connectedTransport_categoryTitle">Connected Transport</string>
    <string name="moreActivity_connectedTransport_title">Available</string>
    <string name="moreActivity_connectedTransport_summary">Enable to see remaining time until connected transport duration ends.</string>
    <string name="moreActivity_connectedTransport_duration_title">Connected Transport Duration</string>
    <string name="moreActivity_connectedTransport_duration_summary">Connected transport lasts for %1$s minutes.</string>
    <string name="moreActivity_connectedTransport_duration_default" translatable="false">90</string>
    <string name="moreActivity_about_categoryTitle">About My KentKart</string>
    <string name="moreActivity_about_rate">Rate &amp; Comment</string>
    <string name="moreActivity_about_help">Help</string>
    <string name="moreActivity_about_feedback">Send Feedback</string>
    <string name="moreActivity_about_version">Version</string>
    <string name="moreActivity_about_openSource">Open Source Licenses</string>

    <string name="help_page1_title">Welcome to\nMy KentKart!</string>
    <string name="help_page2_title">Easy to Use</string>
    <string name="help_page3_title">As Simple As One Touch</string>
    <string name="help_page4_title">Adding a KentKart</string>
    <string name="help_page5_title">Information of a KentKart</string>
    <string name="help_page6_title">Connected Transport</string>
    <string name="help_page7_title">Editing and Deleting a KentKart</string>
    <string name="help_page8_title">More</string>
    <string name="help_page1_message">My KentKart is the best way to get information about your KentKart.\n\n\n\nSwipe Left to Continue</string>
    <string name="help_page2_message">To see information of a KentKart, all you need is 11 digit KentKart number and choosing your region.</string>
    <string name="help_page3_message">Your device supports NFC.\n\nWhen it is enabled, you can see your KentKart information just by touching your KentKart to your device. You don\'t even need to open the application before touching your KentKart.\n\nThe first time you touch, you will need to save your KentKart one time only.</string>
    <string name="help_page4_message">To add a new KentKart, touch the big, round, blue + button. You can add as many KentKarts as you want.</string>
    <string name="help_page5_message">The information you will see will cover the current balance, time of last use, amount last used, time of last load and amount last loaded for a KentKart.</string>
    <string name="help_page6_message">In some regions, it is free to use your KentKart for another form of transport in a certain time after paying once.\n\nYou can enable connected transport from settings to see remaining time to the end of connected transport duration after using your KentKart once.\n\nPlease note that this is only an estimation.</string>
    <string name="help_page7_message">To edit or delete an existing KentKart, touch edit icon on top right corner of the KentKart in the list.</string>
    <string name="help_page8_message">To see some settings and more information about My KentKart, touch 3 dots icon on top right corner of the toolbar.</string>

    <string name="kentKart_region_adana" translatable="false">Adana</string>
    <string name="kentKart_region_alanya" translatable="false">Alanya</string>
    <string name="kentKart_region_antakya" translatable="false">Antakya</string>
    <string name="kentKart_region_bandırma" translatable="false">Bandırma</string>
    <string name="kentKart_region_burdur" translatable="false">Burdur</string>
    <string name="kentKart_region_canakkale" translatable="false">Çanakkale</string>
    <string name="kentKart_region_edirne" translatable="false">Edirne</string>
    <string name="kentKart_region_eregli" translatable="false">Ereğli</string>
    <string name="kentKart_region_inegol" translatable="false">İnegöl</string>
    <string name="kentKart_region_izmir" translatable="false">İzmir</string>
    <string name="kentKart_region_kocaeli" translatable="false">Kocaeli</string>
    <string name="kentKart_region_manisa" translatable="false">Manisa</string>
    <string name="kentKart_region_mersin" translatable="false">Mersin</string>
    <string name="kentKart_region_mugla" translatable="false">Muğla</string>
    <string name="kentKart_region_nigde" translatable="false">Niğde</string>
    <string name="kentKart_region_sivas" translatable="false">Sivas</string>

    <string name="TL" translatable="false">¨&#160;</string>

</resources>
