<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2015 Mehmet Akif Tütüncü
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/moreActivity_connectedTransport_categoryTitle" >

        <SwitchPreference
            android:key="preference_connectedTransport_enabled"
            android:title="@string/moreActivity_connectedTransport_title"
            android:summary="@string/moreActivity_connectedTransport_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="preference_connectedTransport_duration"
            android:title="@string/moreActivity_connectedTransport_duration_title"
            android:summary="@string/moreActivity_connectedTransport_duration_summary"
            android:defaultValue="@string/moreActivity_connectedTransport_duration_default"
            android:positiveButtonText=""
            android:negativeButtonText=""
            android:entries="@array/connectedTransportDurations"
            android:entryValues="@array/connectedTransportDurationValues"
            android:dependency="preference_connectedTransport_enabled"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/moreActivity_about_categoryTitle" >

        <Preference
            android:key="preference_about_rate"
            android:title="@string/moreActivity_about_rate"/>
        <Preference
            android:key="preference_about_help"
            android:title="@string/moreActivity_about_help"/>
        <Preference
            android:key="preference_about_feedback"
            android:title="@string/moreActivity_about_feedback"/>
        <Preference
            android:key="preference_about_version"
            android:title="@string/moreActivity_about_version"/>
        <Preference
            android:key="preference_about_licenses"
            android:title="@string/moreActivity_about_openSource"/>

    </PreferenceCategory>

</PreferenceScreen>