<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:validator="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.andreabaccega.widget.FormEditText
                validator:testType="nocheck"
                validator:emptyErrorString="@string/kentKartEditActivity_name_empty"
                android:id="@+id/formEditText_kentKartEditActivity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/kentKartEditActivity_name_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/textSize_large"/>

            <com.andreabaccega.widget.FormEditText
                validator:testType="regexp"
                validator:customRegexp="^[0-9]{5}-[0-9]{5}-[0-9]{1}$"
                validator:emptyErrorString="@string/kentKartEditActivity_number_empty"
                validator:testErrorString="@string/kentKartEditActivity_number_error"
                android:id="@+id/formEditText_kentKartEditActivity_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:ems="10"
                android:hint="@string/kentKartEditActivity_number_hint"
                android:inputType="phone"
                android:textSize="@dimen/textSize_large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:gravity="center"
                android:text="@string/kentKartEditActivity_number_info"/>

            <Spinner
                android:id="@+id/spinner_kentKartEditActivity_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kentKartEditActivity_region_info"/>

            <LinearLayout
                android:id="@+id/linearLayout_kentKartEditActivity_nfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/kentKartEditActivity_nfc_info"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/spacing_medium"
                    android:src="@drawable/nfc_big"/>

                <TextView
                    android:id="@+id/textView_kentKartEditActivity_nfc_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_extraSmall"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>